// Proto Contract Snippet: Plugin Capability Dry Run Mode
//
// This file shows the proto additions required for the dry-run feature.
// These definitions will be merged into the appropriate proto files.
//
// Target files:
//   - proto/pulumicost/v1/enums.proto (FieldSupportStatus)
//   - proto/pulumicost/v1/costsource.proto (messages and RPC)

syntax = "proto3";

package pulumicost.v1;

// =============================================================================
// Addition to enums.proto
// =============================================================================

// FieldSupportStatus represents the support status of a FOCUS field
// for a given resource type in dry-run introspection.
enum FieldSupportStatus {
  // Unknown or not determined.
  FIELD_SUPPORT_STATUS_UNSPECIFIED = 0;
  // Field is always populated for this resource type.
  FIELD_SUPPORT_STATUS_SUPPORTED = 1;
  // Field is never populated for this resource type.
  FIELD_SUPPORT_STATUS_UNSUPPORTED = 2;
  // Field is populated based on resource configuration (e.g., region, tags).
  FIELD_SUPPORT_STATUS_CONDITIONAL = 3;
  // Field requires runtime data to determine value; cannot be introspected.
  FIELD_SUPPORT_STATUS_DYNAMIC = 4;
}

// =============================================================================
// Additions to costsource.proto - Messages
// =============================================================================

// FieldMapping represents the support status for a single FOCUS field.
// Used in DryRunResponse to report which fields a plugin would populate.
message FieldMapping {
  // field_name is the FOCUS field identifier (e.g., "service_category", "billed_cost").
  // Must match a field name in FocusCostRecord message.
  string field_name = 1;

  // support_status indicates how this field is supported for the queried resource type.
  FieldSupportStatus support_status = 2;

  // condition_description provides human-readable explanation when status is
  // CONDITIONAL or DYNAMIC. Optional for SUPPORTED/UNSUPPORTED status.
  // Example: "Only populated for regional resources in multi-AZ providers"
  string condition_description = 3;

  // expected_type indicates the data type of the field value.
  // Values: "string", "double", "timestamp", "enum", "map", "bool"
  string expected_type = 4;
}

// DryRunRequest contains parameters for querying plugin field mapping capabilities.
// Sent to the DryRun RPC for standalone discovery.
message DryRunRequest {
  // resource contains the resource descriptor to query field mappings for.
  // Required. Must have valid provider and resource_type fields.
  ResourceDescriptor resource = 1;

  // simulation_parameters provides optional key-value pairs to simulate
  // different scenarios (e.g., {"region": "us-west-2"} to see region-specific behavior).
  // Unknown keys are ignored by plugins.
  map<string, string> simulation_parameters = 2;
}

// DryRunResponse contains the field mapping information returned by a plugin.
// Includes per-field support status and configuration validation results.
//
// Response time requirement: <100ms (no external API calls).
message DryRunResponse {
  // field_mappings contains the support status for each known FOCUS field.
  // Should include entries for all ~50 FocusCostRecord fields.
  repeated FieldMapping field_mappings = 1;

  // configuration_valid indicates whether the plugin configuration is valid.
  // When false, configuration_errors contains the error details.
  bool configuration_valid = 2;

  // configuration_errors contains human-readable error messages when
  // configuration_valid is false. Empty when configuration is valid.
  repeated string configuration_errors = 3;

  // resource_type_supported indicates whether the queried resource type
  // is supported by this plugin. When false, field_mappings may be empty.
  bool resource_type_supported = 4;
}

// =============================================================================
// Additions to costsource.proto - RPC
// =============================================================================

// Add to CostSourceService:
//
// service CostSourceService {
//   // ... existing RPCs ...
//
//   // DryRun returns field mapping information for a resource type without
//   // performing actual cost data retrieval. Useful for debugging plugin
//   // configurations and comparing plugin capabilities.
//   //
//   // This RPC is optional - plugins that do not support dry-run introspection
//   // should return Unimplemented. Check SupportsResponse.capabilities["dry_run"]
//   // to detect support before calling.
//   //
//   // Response time requirement: <100ms (no external network calls).
//   //
//   // Error cases:
//   //   - InvalidArgument: Invalid resource descriptor (empty provider/resource_type)
//   //   - Unimplemented: Plugin does not support dry-run introspection
//   //   - Internal: Unexpected error during introspection
//   rpc DryRun(DryRunRequest) returns (DryRunResponse);
// }

// =============================================================================
// Modifications to existing messages
// =============================================================================

// Add to GetActualCostRequest:
//
// message GetActualCostRequest {
//   // ... existing fields ...
//
//   // dry_run when true, returns DryRunResponse in dry_run_result field
//   // instead of performing actual cost data retrieval.
//   // Default: false (normal cost retrieval behavior).
//   bool dry_run = 6;  // Next available field number
// }

// Add to GetActualCostResponse:
//
// message GetActualCostResponse {
//   // ... existing fields ...
//
//   // dry_run_result contains field mapping information when request.dry_run
//   // was true. Empty when dry_run was false or not set.
//   DryRunResponse dry_run_result = 3;  // Next available field number
// }

// Add to GetProjectedCostRequest:
//
// message GetProjectedCostRequest {
//   // ... existing fields ...
//
//   // dry_run when true, returns DryRunResponse in dry_run_result field
//   // instead of performing projected cost calculation.
//   // Default: false (normal projection behavior).
//   bool dry_run = 5;  // Next available field number
// }

// Add to GetProjectedCostResponse:
//
// message GetProjectedCostResponse {
//   // ... existing fields ...
//
//   // dry_run_result contains field mapping information when request.dry_run
//   // was true. Empty when dry_run was false or not set.
//   DryRunResponse dry_run_result = 6;  // Next available field number
// }

// Document in SupportsResponse.capabilities:
//
// message SupportsResponse {
//   // ...
//   // capabilities may include:
//   //   "dry_run": true  - Plugin supports DryRun RPC and dry_run flag on cost RPCs
//   //   "recommendations": true  - Plugin supports GetRecommendations RPC
//   map<string, bool> capabilities = 3;
// }
